--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>goit-js-hw-13-image-finder</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
 <body>
     <form class="form-inline search-form js-search-form">
         <div class="form-group mx-sm-3 mb-2">
-            <label for="search-form" class="sr-only">What should I find?</label>
+            <label for="search-form" class="sr-only"></label>
             <input type="text" class="form-control" name="query" id="search-form" placeholder="Search images..."
                 autocomplete="off" />
         </div>
